feat: together에 관심기능 추가